Added translations, fix form and animated videos

--- a/public/fonts/style.css
+++ b/public/fonts/style.css
@@ -2,3 +2,7 @@
   font-family: "Calibri";
   src: url("../static/calibri-bold.ttf") format("ttf");
 }
+@font-face {
+  font-family: "Drukwide";
+  src: url("../static/druk.wide.ttf") format("ttf");
+}
